=== master

* Respect indislive and ignore indcheckxmin index attributes when using Database#indexes on PostgreSQL (jeremyevans)

* Explicitly disallow use of server-side prepared statements when using Dataset#call in the jdbc/postgresql adapter (jeremyevans) (#1448)

* Support common table expressions, window functions, dropping CHECK constraints, and recognizing CURRENT_DATE defaults on MariaDB 10.2+ (jeremyevans)

* Make Database#reset_primary_key_sequence work on PostgreSQL 10+ (jeremyevans)

* Support :connect_sqls Database option for easily issuing sql commands on all new connections (jeremyevans)

* Support :extensions Database option for loading extensions when initializing, useful in connection strings (jeremyevans)

* Avoid warning if trying to rollback after a commit or rollback raises an exception in the postgres adapter (jeremyevans)

* Support Date::Infinity values in the pg_extended_date_support extension (jeremyevans)

=== 5.2.0 (2017-10-27)

* Fix type conversion for smallint unsigned and integer unsigned types on jdbc/mysql (jeremyevans) (#1443)

* Add pg_extended_date_support extension, for handling infinite and BC dates/timestamps (jeremyevans)

* Do not ignore existing @dataset instance variable when subclassing Sequel::Model (bjmllr) (#1435)

=== 5.1.0 (2017-10-01)

* Make jdbc/h2 and jdbc/hsqldb adapters respect :foreign_key_constraint_name option when adding new foreign key column (jeremyevans)

* Do not issue unnecessary query for macaddr type oid when loading the pg_inet extension (jeltz) (#1423)

* Make alter_table add_foreign_key with a column symbol reversible when using the :foreign_key_constraint_name option (jeremyevans) (#1422)

* Do not raise an error if calling Model.freeze on a frozen model (jeremyevans) (#1421)

* Make Database#copy_into in the jdbc/postgresql adapter handle multi-byte strings (ckoenig) (#1416)

* Remove deprecated Model use_after_commit_rollback class and instance methods (jeremyevans)
